Fix nav behind modal. Don't cache bust library assets. Modal improvements.

--- a/web/public/style.css
+++ b/web/public/style.css
@@ -58,6 +58,13 @@ video {
     width:100%;
     height:100%;
 }
+.vertical-center {
+    min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+    min-height: 100vh; /* These two lines are counted as one :-)       */
+
+    display: flex;
+    align-items: center;
+}
 
 hr.no-margin {
     margin: 0;
@@ -107,9 +114,13 @@ select {
 #site-modal-wrapper {
     position: absolute;
     display: none;
-    top: 62px;
+    top: 0;
     left: 0;
     width: 100%;
+    min-height: 100%;
+}
+#site-modal-wrapper .container {
+    padding-top: 62px;
 }
 
 table.sortable td.bars span {
